--- a/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
+++ b/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
@@ -44,10 +44,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="NounClass.cs" />
+    <Compile Include="Nouns\CopyrightHolderObject.cs" />
+    <Compile Include="Nouns\CopyrightPolicyObject.cs" />
+    <Compile Include="Nouns\FieldObject.cs" />
+    <Compile Include="Nouns\KeywordCategoryObject.cs" />
+    <Compile Include="Nouns\KeywordObject.cs" />
+    <Compile Include="Nouns\FieldValueObject.cs" />
+    <Compile Include="Nouns\FileObject.cs" />
+    <Compile Include="Nouns\OARestNounObject.cs" />
+    <Compile Include="Nouns\CategoryObject.cs" />
+    <Compile Include="Nouns\KeywordValueObject.cs" />
+    <Compile Include="Nouns\PhotographerObject.cs" />
+    <Compile Include="Nouns\ProjectKeywordCategoryObject.cs" />
+    <Compile Include="Nouns\ProjectKeywordObject.cs" />
+    <Compile Include="Nouns\ProjectKeywordValueObject.cs" />
+    <Compile Include="Nouns\ProjectObject.cs" />
     <Compile Include="RequestMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RestAPI.cs" />
+    <Compile Include="Nouns\SizeObject.cs" />
+    <Compile Include="Nouns\SizeValueObject.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
