--- a/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
+++ b/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{164341E9-FAD3-4C3F-93CB-554AF322C381}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>WindowsFormsApplication1</RootNamespace>
-    <AssemblyName>TestRestClient</AssemblyName>
+    <RootNamespace>OpenAsset.RestClient.TestLibrary</RootNamespace>
+    <AssemblyName>OpenAsset.RestClient.TestLibrary</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>Client</TargetFrameworkProfile>
     <FileAlignment>512</FileAlignment>
@@ -61,6 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\AssemblySharedInfo.cs">
+      <Link>Properties\AssemblySharedInfo.cs</Link>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -96,7 +99,7 @@
   <ItemGroup>
     <ProjectReference Include="..\OpenAsset.RestClient.Library\OpenAsset.RestClient.Library.csproj">
       <Project>{1E56E79F-E20C-4AD5-BC93-D974792990CB}</Project>
-      <Name>OARestClientLib</Name>
+      <Name>OpenAsset.RestClient.Library</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
