--- a/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
+++ b/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
@@ -37,6 +37,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -44,39 +45,29 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Nouns\CategoryNoun.cs" />
-    <Compile Include="NounObjects\CategoryObject.cs" />
-    <Compile Include="NounObjects\CopyrightHolderObject.cs" />
-    <Compile Include="NounObjects\CopyrightPolicyObject.cs" />
-    <Compile Include="NounObjects\FieldObject.cs" />
-    <Compile Include="NounObjects\FieldValueObject.cs" />
-    <Compile Include="NounObjects\FileObject.cs" />
-    <Compile Include="NounObjects\KeywordCategoryObject.cs" />
-    <Compile Include="NounObjects\KeywordObject.cs" />
-    <Compile Include="NounObjects\KeywordValueObject.cs" />
-    <Compile Include="NounObjects\OARestNounObject.cs" />
-    <Compile Include="NounObjects\PhotographerObject.cs" />
-    <Compile Include="NounObjects\ProjectKeywordCategoryObject.cs" />
-    <Compile Include="NounObjects\ProjectKeywordObject.cs" />
-    <Compile Include="NounObjects\ProjectKeywordValueObject.cs" />
-    <Compile Include="NounObjects\ProjectObject.cs" />
-    <Compile Include="NounObjects\SizeObject.cs" />
-    <Compile Include="NounObjects\SizeValueObject.cs" />
-    <Compile Include="Nouns\ProjectNoun.cs" />
-    <Compile Include="Nouns\ProjectKeywordCategoryNoun.cs" />
-    <Compile Include="Nouns\ProjectKeywordNoun.cs" />
-    <Compile Include="Nouns\CopyrightHolderNoun.cs" />
-    <Compile Include="Nouns\CopyrightPolicyNoun.cs" />
-    <Compile Include="Nouns\FieldNoun.cs" />
-    <Compile Include="Nouns\FileNoun.cs" />
-    <Compile Include="Nouns\KeywordCategoryNoun.cs" />
-    <Compile Include="Nouns\KeywordNoun.cs" />
-    <Compile Include="Nouns\PhotographerNoun.cs" />
-    <Compile Include="Nouns\SizeNoun.cs" />
-    <Compile Include="PostResponse.cs" />
-    <Compile Include="RequestMethods.cs" />
+    <Compile Include="ConnectionHelper.cs" />
+    <Compile Include="Constant.cs" />
+    <Compile Include="Error.cs" />
+    <Compile Include="NotValidUserException.cs" />
+    <Compile Include="Noun\AccessLevel.cs" />
+    <Compile Include="Noun\Album.cs" />
+    <Compile Include="Noun\Base\BaseNoun.cs" />
+    <Compile Include="Noun\Category.cs" />
+    <Compile Include="Noun\CopyrightHolder.cs" />
+    <Compile Include="Noun\Field.cs" />
+    <Compile Include="Noun\FieldLookupString.cs" />
+    <Compile Include="Noun\File..cs" />
+    <Compile Include="Noun\Keyword.cs" />
+    <Compile Include="Noun\KeywordCategory.cs" />
+    <Compile Include="Noun\Project.cs" />
+    <Compile Include="Noun\ProjectKeyword.cs" />
+    <Compile Include="Noun\ProjectKeywordCategory.cs" />
+    <Compile Include="Noun\Size.cs" />
+    <Compile Include="Noun\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RestAPI.cs" />
+    <Compile Include="ConnectionFactory.cs" />
+    <Compile Include="RESTAPIException.cs" />
+    <Compile Include="RESTOptions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
