Added missing Nouns

--- a/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
+++ b/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
@@ -51,22 +51,29 @@
     <Compile Include="CustomResponses\NewItem.cs" />
     <Compile Include="Exception\NotValidUserException.cs" />
     <Compile Include="Exception\NounNonExistingPropertyException.cs" />
+    <Compile Include="FileType.cs" />
     <Compile Include="Noun\AccessLevel.cs" />
     <Compile Include="Noun\Album.cs" />
+    <Compile Include="Noun\AlternateStore.cs" />
+    <Compile Include="Noun\AspectRatios.cs" />
     <Compile Include="Noun\Base\BaseNoun.cs" />
     <Compile Include="Noun\Category.cs" />
     <Compile Include="Noun\CopyrightHolder.cs" />
+    <Compile Include="Noun\CopyrightPolicy.cs" />
     <Compile Include="Noun\Field.cs" />
     <Compile Include="Noun\FieldLookupString.cs" />
     <Compile Include="Noun\File.cs" />
     <Compile Include="Noun\Keyword.cs" />
     <Compile Include="Noun\KeywordCategory.cs" />
+    <Compile Include="Noun\Photographer.cs" />
     <Compile Include="Noun\Project.cs" />
     <Compile Include="Noun\ProjectKeyword.cs" />
     <Compile Include="Noun\ProjectKeywordCategory.cs" />
+    <Compile Include="Noun\Result.cs" />
     <Compile Include="Noun\Search.cs" />
     <Compile Include="Noun\SearchItem.cs" />
     <Compile Include="Noun\Size.cs" />
+    <Compile Include="Noun\TextRewrite.cs" />
     <Compile Include="Noun\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Exception\RESTAPIException.cs" />
