--- a/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
+++ b/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="ConnectionHelper.cs" />
     <Compile Include="Constant.cs" />
+    <Compile Include="CustomResponses\Base\BaseCustomResponse.cs" />
+    <Compile Include="CustomResponses\CustomResponseConverter.cs" />
     <Compile Include="CustomResponses\Error.cs" />
     <Compile Include="CustomResponses\NewItem.cs" />
     <Compile Include="Exception\NotValidUserException.cs" />
