added Integration Tests

--- a/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
+++ b/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject />
+    <StartupObject>OpenAsset.RestClient.TestLibrary.IntegrationTest</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -65,7 +65,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Test.cs">
+    <Compile Include="IntegrationTest.cs" />
+    <Compile Include="IsolationTest.cs">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Compile>
     <Compile Include="Program.cs" />
