--- a/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
+++ b/OpenAsset.RestClient.TestLibrary/OpenAsset.RestClient.TestLibrary.csproj
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>OpenAsset.RestClient.TestLibrary.IntegrationTest</StartupObject>
+    <StartupObject>OpenAsset.RestClient.TestLibrary.IsolationTest</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
