Fix some compile errors. Add new explicit exceptions for Cache results.

--- a/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
+++ b/OpenAsset.RestClient.Library/OpenAsset.RestClient.Library.csproj
@@ -53,6 +53,8 @@
     <Compile Include="CustomResponses\Base\BaseCustomResponse.cs" />
     <Compile Include="CustomResponses\CustomResponseConverter.cs" />
     <Compile Include="CustomResponses\Error.cs" />
+    <Compile Include="Exception\PreconditionFailedException.cs" />
+    <Compile Include="Exception\CacheHitException.cs" />
     <Compile Include="Exception\NotValidUserException.cs" />
     <Compile Include="Exception\NounNonExistingPropertyException.cs" />
     <Compile Include="Information\AccessLevelsList.cs" />
